fixed letter spacing/capitalization

--- a/src/components/Header.scss
+++ b/src/components/Header.scss
@@ -21,3 +21,11 @@
 .header_title{
     font-size: 3rem;
 }
+
+.header_left-box{
+
+}
+
+.header_right-box{
+    
+}
