--- a/src/components/Intro.scss
+++ b/src/components/Intro.scss
@@ -112,6 +112,7 @@
 
 .intro_title_box_letter1{
     animation: appearAtEnd 2.5s;
+    margin-left: 10px;
 }
 .intro_title_box_letter2{
     animation: appearAtEnd 2.75s;
